k8s/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toskamesh-gateway
  labels:
    app.kubernetes.io/name: toskamesh
    app.kubernetes.io/instance: toskamesh
    app.kubernetes.io/component: gateway
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 443
    targetPort: 8443
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/name: toskamesh
    app.kubernetes.io/instance: toskamesh
    app.kubernetes.io/component: gateway
